# VoiceMaster2.0

./: .env.example  .gitignore  Dockerfile  README.md  bot_instance.py  config.py  container.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 685c8c97adf0_refine_audit_log_types.py  6a807c3a2fed_add_guild_relationship_to_audit_log.py  83a473980604_initial_migration.py  e2e16b7c49e6_add_guild_id_to_voice_channels_table.py  fe6022cb39e8_add_cleanup_on_startup_flag_to_guilds.py
cogs/: errors.py  events.py  voice_commands.py
database/: crud.py  database.py  models.py  repositories.py
interfaces/: audit_log_repository.py  audit_log_service.py  guild_repository.py  guild_service.py  user_settings_repository.py  voice_channel_repository.py  voice_channel_service.py
repositories/: audit_log_repository.py  guild_repository.py  voice_channel_repository.py
services/: audit_decorator.py  audit_log_service.py  guild_service.py  voice_channel_service.py
tests/: conftest.py  test_botinstance.py  test_main.py
tests/cogs/: test_crud.py  test_errors.py  test_events.py  test_events_extended.py  test_voice_commands.py  test_voice_commands_extended.py
tests/database/: test_database.py
tests/repositories/: test_audit_log_repository.py  test_container.py  test_guild_repository.py  test_voice_channel_repository.py
tests/services/: test_audit_log_service.py  (+2 more)
utils/: checks.py  db_helpers.py  embed_helpers.py  formatters.py  responses.py
views/: setup_view.py  voice_commands_views.py
(+3 files in other folders)
