[tool.ruff]
line-length = 180
target-version = "py310"

[project]
name = "voicemaster"
version = "2.0.0"
description = "A Discord bot for managing temporary voice channels."
authors = [{ name = "Fett", email = "fetttttjoe@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "alembic==1.16.4",
    "asyncpg==0.30.0",
    "discord.py==2.5.2",
    "SQLAlchemy==2.0.42",
    "PyNaCl==1.5.0",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.2.1",
    "ruff==0.12.7",
    "mypy==1.17.1",
    "aiosqlite==0.20.0",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # Enable Error, Flake8, Warnings, and Isort rules
ignore = []
exclude = ["alembic/versions"]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["I001", "W293", "W292", "W291", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
files = [
    "main.py",
    "config.py",
    "container.py",
    "cogs/",
    "database/",
    "interfaces/",
    "services/",
    "tests/",
    "utils/",
    "views/",
]
exclude = ["alembic/"]

